--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "node": ">=0.12.0"
   },
   "devDependencies": {
+    "babel": "^5.8.21",
     "babel-core": "^5.5.6",
     "browser-sync": "^2.2.1",
     "del": "^1.1.1",
