--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
+    "dat-gui": "~0.5.1",
     "modernizr": "~2.8.1",
     "threejs": "*"
   },
