ZippedRWXLoader: load RWX file from ZIP
This would be able to load files from the actual AW object directory
if it wasn't for JS' forced CORS handling...

--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "bootstrap-sass": "~3.3.5",
     "dat-gui": "~0.5.1",
     "modernizr": "~2.8.1",
-    "threejs": "*"
+    "threejs": "*",
+    "pako": "~0.2.8"
   },
   "overrides": {
     "bootstrap-sass": {
